<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ladyrei.gameloggery.GameDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:src="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/gameDetailImageView"
            android:layout_alignParentTop="true"/>

        <TextView
            android:text="@string/detailTitleString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/gameDetailImageView"
            android:id="@+id/gameDetailTitleTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailTitleTextView"
            android:layout_alignBottom="@id/gameDetailTitleTextView"
            android:layout_toEndOf="@id/gameDetailTitleTextView"
            android:id="@+id/gameDetailTitleShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailPlatformString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailTitleTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailPlatformTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailPlatformTextView"
            android:layout_alignBottom="@id/gameDetailPlatformTextView"
            android:layout_toEndOf="@id/gameDetailPlatformTextView"
            android:id="@+id/gameDetailPlatformShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailYearString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailPlatformTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailYearTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailYearTextView"
            android:layout_alignBottom="@id/gameDetailYearTextView"
            android:layout_toEndOf="@id/gameDetailYearTextView"
            android:id="@+id/gameDetailYearShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailPublisherString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailYearTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailPublisherTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailPublisherTextView"
            android:layout_alignBottom="@id/gameDetailPublisherTextView"
            android:layout_toEndOf="@id/gameDetailPublisherTextView"
            android:id="@+id/gameDetailPublisherShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailDeveloperString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailPublisherTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailDeveloperTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailDeveloperTextView"
            android:layout_alignBottom="@id/gameDetailDeveloperTextView"
            android:layout_toEndOf="@id/gameDetailDeveloperTextView"
            android:id="@+id/gameDetailDeveloperShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailHoursString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailDeveloperTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailHoursPlayedTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailHoursPlayedTextView"
            android:layout_alignBottom="@id/gameDetailHoursPlayedTextView"
            android:layout_toEndOf="@id/gameDetailHoursPlayedTextView"
            android:id="@+id/gameDetailHoursPlayedShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:text="@string/detailBeatenString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailHoursPlayedTextView"
            android:id="@+id/gameDetailBeatenTextView"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:text="@string/detailRatingString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameDetailBeatenTextView"
            android:layout_alignParentStart="true"
            android:id="@+id/gameDetailRatingTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/gameDetailRatingTextView"
            android:layout_alignBottom="@id/gameDetailRatingTextView"
            android:layout_toEndOf="@id/gameDetailRatingTextView"
            android:id="@+id/gameDetailRatingShow"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameDetailBeatenCheckBox"
            android:layout_alignBaseline="@+id/gameDetailBeatenTextView"
            android:layout_alignBottom="@+id/gameDetailBeatenTextView"
            android:layout_toEndOf="@+id/gameDetailBeatenTextView"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="92dp"
            android:visibility="invisible"
            android:id="@+id/imageProgressBar"
            android:indeterminate="true"/>


    </RelativeLayout>
</RelativeLayout>
